// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListItem should render with props 1`] = `
<Link
  className="list-item"
  replace={false}
  to="/edit/1"
>
  <div>
    <h3
      className="list-item__title"
    >
      bcd
    </h3>
    <span
      className="list-item__subtitle"
    >
      December 28, 1969
    </span>
  </div>
  <h3
    className="list-item__data"
  >
    0.22 $
  </h3>
</Link>
`;

exports[`ExpenseListItem should render without any props 1`] = `
<Link
  className="list-item"
  replace={false}
  to="/edit/undefined"
>
  <div>
    <h3
      className="list-item__title"
    />
    <span
      className="list-item__subtitle"
    >
      January 1, 1970
    </span>
  </div>
  <h3
    className="list-item__data"
  >
    0.00 $
  </h3>
</Link>
`;
